--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="src/styles.css"
   </head>
   <body>
-    <div></div>
+    <div>
+    </div>
+    <script src="src/app.js"
   </body>
 </html>
