--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="src/styles.css"
   </head>
   <body>
-    <div>
-    </div>
-    <script src="src/app.js"
+    <div></div>
+    <script src="src/app.js"></script>
   </body>
 </html>
