--- a/index.html
+++ b/index.html
@@ -11,10 +11,43 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/8a846d8cbf.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/styles.css"
   </head>
   <body>
-    <div></div>
+    <div class="container">
+      <div class="date-time">Monday 8:21 pm</div>
+      <div class="unitsButton">C | F</div>
+      <h1>Toronto, Canada</h1>
+      <i class="fas fa-umbrella"></i>
+      <div>You might need this</div>
+      <div class="temp">23 °</div>
+      <div class="row">
+        <div class="col-3">Humidity: 59%</div>
+        <div class="col-3">Wind: 5 km/h</div>
+        <div class="col-3">Low: 12°</div>
+      </div>
+      <div class="future-forecast-container">
+        <div class="row">
+          <div class="col">TUE</div>
+          <div class="col">WED</div>
+          <div class="col">THU</div>
+          <div class="col">FRI</div>
+          <div class="col">SAT</div>
+        </div>
+      </div>
+      <small
+        ><a
+          href="https://github.com/ldiffin/vanilla-weather-app"
+          target="_blank"
+          >Open source code</a
+        >
+        by Lia Diffin</small
+      >
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
