--- a/index.html
+++ b/index.html
@@ -11,42 +11,42 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/8a846d8cbf.js"
-      crossorigin="anonymous"
-    ></script>
     <link rel="stylesheet" href="src/styles.css"
   </head>
   <body>
     <div class="container">
-      <div class="date-time">Monday 8:21 pm</div>
-      <div class="unitsButton">C | F</div>
-      <h1>Toronto, Canada</h1>
-      <i class="fas fa-umbrella"></i>
-      <div>You might need this</div>
-      <div class="temp">23 °</div>
-      <div class="row">
-        <div class="col-3">Humidity: 59%</div>
-        <div class="col-3">Wind: 5 km/h</div>
-        <div class="col-3">Low: 12°</div>
-      </div>
-      <div class="future-forecast-container">
-        <div class="row">
-          <div class="col">TUE</div>
-          <div class="col">WED</div>
-          <div class="col">THU</div>
-          <div class="col">FRI</div>
-          <div class="col">SAT</div>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="top-header">
+            Monday 8:21 pm <span class="units-button">C | F</span>
+          </div>
+          <h1>Toronto, Canada</h1>
+          <div class="icon-text">You might need this</div>
+          <div class="temp">23°</div>
+          <div class="row weather-stats">
+            <div class="col-4">Humidity: 59%</div>
+            <div class="col-4">Wind: 5 km/h</div>
+            <div class="col-4">Low: 12°</div>
+          </div>
+          <div class="future-forecast-container">
+            <div class="row future-forecast">
+              <div class="col">TUE</div>
+              <div class="col">WED</div>
+              <div class="col">THU</div>
+              <div class="col">FRI</div>
+              <div class="col">SAT</div>
+            </div>
+          </div>
         </div>
-      </div>
-      <small
-        ><a
-          href="https://github.com/ldiffin/vanilla-weather-app"
-          target="_blank"
-          >Open source code</a
+        <small>
+          <a
+            href="https://github.com/ldiffin/vanilla-weather-app"
+            target="_blank"
+            >Open source code</a
+          >
+          by Lia Diffin</small
         >
-        by Lia Diffin</small
-      >
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
