--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla Weather App</title>
+    <script
+      src="https://kit.fontawesome.com/8a846d8cbf.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,6 +25,9 @@
             Monday 8:21 pm <span class="units-button">C | F</span>
           </div>
           <h1>Toronto, Canada</h1>
+          <img
+            src="https://img.icons8.com/plumpy/192/000000/--cloud-umbrella--v2.png"
+          />
           <div class="icon-text">You might need this</div>
           <div class="temp">23°</div>
           <div class="row weather-stats">
@@ -30,11 +37,41 @@
           </div>
           <div class="future-forecast-container">
             <div class="row future-forecast">
-              <div class="col">TUE</div>
-              <div class="col">WED</div>
-              <div class="col">THU</div>
-              <div class="col">FRI</div>
-              <div class="col">SAT</div>
+              <div class="col">
+                <span class="day">TUE</span>
+                <br />
+                <i class="fas fa-sun"></i>
+                <br />
+                <span>23°</span>
+              </div>
+              <div class="col">
+                <span class="day">WED</span>
+                <br />
+                <i class="fas fa-sun"></i>
+                <br />
+                <span>23°</span>
+              </div>
+              <div class="col">
+                <span class="day">THU</span>
+                <br />
+                <i class="fas fa-sun"></i>
+                <br />
+                <span>23°</span>
+              </div>
+              <div class="col">
+                <span class="day">FRI</span>
+                <br />
+                <i class="fas fa-sun"></i>
+                <br />
+                <span>23°</span>
+              </div>
+              <div class="col">
+                <span class="day">SAT</span>
+                <br />
+                <i class="fas fa-sun"></i>
+                <br />
+                <span>23°</span>
+              </div>
             </div>
           </div>
         </div>
