Added in JS for current temperature and characteristics
City name; current temperature; humidity; wind; temp_min

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
           <div class="top-header">
             Monday 8:21 pm <span class="units-button">C | F</span>
           </div>
-          <h1>Toronto, Canada</h1>
+          <h1 id="city"></h1>
           <img
             src="https://img.icons8.com/plumpy/192/000000/--cloud-umbrella--v2.png"
           />
           <div class="icon-text">You might need this</div>
-          <div class="temp">23°</div>
+          <div class="temp" id="temperature"><span>°</span></div>
           <div class="row weather-stats">
-            <div class="col-4">Humidity: 59%</div>
-            <div class="col-4">Wind: 5 km/h</div>
-            <div class="col-4">Low: 12°</div>
+            <div class="col-4">Humidity: <span id="humidity"></span>%</div>
+            <div class="col-4">Wind: <span id="wind"></span> km/h</div>
+            <div class="col-4">Low: <span id="temp-min"></span>°</div>
           </div>
           <div class="future-forecast-container">
             <div class="row future-forecast">
