--- a/index.html
+++ b/index.html
@@ -24,13 +24,25 @@
         <div class="weather-app">
           <div class="top-header">
             <form id="search-form">
-              <input
-                type="search"
-                placeholder="Enter city name.."
-                class="search-field"
-                id="search-input"
-              />
-              <input type="submit" value="search" class="search-button" />
+              <div class="row">
+                <div class="col-7">
+                  <input
+                    type="search"
+                    placeholder="Enter city name.."
+                    class="search-field"
+                    id="search-input"
+                  />
+                </div>
+                <div class="col-3">
+                  <input type="submit" value="search" class="search-button" />
+                </div>
+                <div class="col-2">
+                  <span class="units"
+                    ><a href="#" id="celsiusLink" class="active">C</a> |
+                    <a href="#" id="fahrenheitLink">F</a></span
+                  >
+                </div>
+              </div>
             </form>
           </div>
           <h1 id="city"></h1>
