Added weather description

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <img
             src="https://img.icons8.com/plumpy/192/000000/--cloud-umbrella--v2.png"
           />
-          <div class="icon-text">You might need this</div>
+          <div class="icon-text" id="weather-description"></div>
           <div class="temp" id="temperature"><span>°</span></div>
           <div class="row weather-stats">
             <div class="col-4">Humidity: <span id="humidity"></span>%</div>
