Integrated weather icon with API

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             </form>
           </div>
           <h1 id="city"></h1>
-          <img
-            src="https://img.icons8.com/plumpy/192/000000/--cloud-umbrella--v2.png"
-          />
+          <img src="" id="weather-icon" />
           <div class="icon-text" id="weather-description"></div>
           <div class="temp" id="temperature"><span>°</span></div>
           <div class="row weather-stats">
