Added JS Forecast

--- a/index.html
+++ b/index.html
@@ -54,45 +54,7 @@
             <div class="col-4">Wind: <span id="wind"></span> km/h</div>
             <div class="col-4">Low: <span id="temp-min"></span>°</div>
           </div>
-          <div class="future-forecast-container">
-            <div class="row future-forecast">
-              <div class="col">
-                <span class="day">TUE</span>
-                <br />
-                <i class="fas fa-sun"></i>
-                <br />
-                <span>23°</span>
-              </div>
-              <div class="col">
-                <span class="day">WED</span>
-                <br />
-                <i class="fas fa-sun"></i>
-                <br />
-                <span>23°</span>
-              </div>
-              <div class="col">
-                <span class="day">THU</span>
-                <br />
-                <i class="fas fa-sun"></i>
-                <br />
-                <span>23°</span>
-              </div>
-              <div class="col">
-                <span class="day">FRI</span>
-                <br />
-                <i class="fas fa-sun"></i>
-                <br />
-                <span>23°</span>
-              </div>
-              <div class="col">
-                <span class="day">SAT</span>
-                <br />
-                <i class="fas fa-sun"></i>
-                <br />
-                <span>23°</span>
-              </div>
-            </div>
-          </div>
+          <div class="future-forecast-container" id="forecast"></div>
         </div>
         <small>
           <a
