--- a/index.html
+++ b/index.html
@@ -27,18 +27,24 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="top-header">
-            <form id="search-form">
-              <div class="row">
-                <div class="col-7">
+            <form class="search-form" id="search-form">
+              <div class="row justify-content-center">
+                <div class="col-6">
                   <input
                     type="search"
                     placeholder="Enter city name.."
-                    class="search-field"
+                    autofocus="on"
+                    autocomplete="off"
+                    class="form-control"
                     id="search-input"
                   />
                 </div>
-                <div class="col-3">
-                  <input type="submit" value="search" class="search-button" />
+                <div class="col-4">
+                  <input
+                    type="submit"
+                    value="search"
+                    class="btn btn-primary search-button"
+                  />
                 </div>
               </div>
             </form>
